packages/mimir/lib/src/bridge_generated.io.dart


final class wire_list_sort_by extends ffi.Struct {
  external ffi.Pointer<wire_SortBy> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_list_filter extends ffi.Struct {
  external ffi.Pointer<wire_Filter> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_Filter extends ffi.Struct {
  @ffi.Int32()
  external int tag;

  external ffi.Pointer<FilterKind> kind;
}

final class FilterKind extends ffi.Union {
  external ffi.Pointer<wire_Filter_Or> Or;

  external ffi.Pointer<wire_Filter_And> And;

  external ffi.Pointer<wire_Filter_Not> Not;

  external ffi.Pointer<wire_Filter_Exists> Exists;

  external ffi.Pointer<wire_Filter_InValues> InValues;

  external ffi.Pointer<wire_Filter_GreaterThan> GreaterThan;

  external ffi.Pointer<wire_Filter_GreaterThanOrEqual> GreaterThanOrEqual;

  external ffi.Pointer<wire_Filter_Equal> Equal;

  external ffi.Pointer<wire_Filter_NotEqual> NotEqual;

  external ffi.Pointer<wire_Filter_LessThan> LessThan;

  external ffi.Pointer<wire_Filter_LessThanOrEqual> LessThanOrEqual;

  external ffi.Pointer<wire_Filter_Between> Between;

  external ffi.Pointer<wire_Filter_IsNull> IsNull;

  external ffi.Pointer<wire_Filter_IsEmpty> IsEmpty;
}

final class wire_Filter_Or extends ffi.Struct {
  external ffi.Pointer<wire_list_filter> field0;
}

final class wire_Filter_And extends ffi.Struct {
  external ffi.Pointer<wire_list_filter> field0;
}

final class wire_Filter_Not extends ffi.Struct {
  external ffi.Pointer<wire_Filter> field0;
}

final class wire_Filter_Exists extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> field;
}

final class wire_Filter_InValues extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> field;

  external ffi.Pointer<wire_StringList> values;
}

final class wire_Filter_GreaterThan extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> field;

  external ffi.Pointer<wire_uint_8_list> value;
}

final class wire_Filter_GreaterThanOrEqual extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> field;

  external ffi.Pointer<wire_uint_8_list> value;
}

final class wire_Filter_Equal extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> field;

  external ffi.Pointer<wire_uint_8_list> value;
}

final class wire_Filter_NotEqual extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> field;

  external ffi.Pointer<wire_uint_8_list> value;
}

final class wire_Filter_LessThan extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> field;

  external ffi.Pointer<wire_uint_8_list> value;
}

final class wire_Filter_LessThanOrEqual extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> field;

  external ffi.Pointer<wire_uint_8_list> value;
}

final class wire_Filter_Between extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> field;

  external ffi.Pointer<wire_uint_8_list> from;

  external ffi.Pointer<wire_uint_8_list> to;
}

final class wire_Filter_IsNull extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> field;
}

final class wire_Filter_IsEmpty extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> field;
}

final class wire_Synonyms extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> word;

  external ffi.Pointer<wire_StringList> synonyms;
}

final class wire_list_synonyms extends ffi.Struct {
  external ffi.Pointer<wire_Synonyms> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_MimirIndexSettings extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> primary_key;

  external ffi.Pointer<wire_StringList> searchable_fields;

  external ffi.Pointer<wire_StringList> filterable_fields;

  external ffi.Pointer<wire_StringList> sortable_fields;

  external ffi.Pointer<wire_StringList> ranking_rules;

  external ffi.Pointer<wire_StringList> stop_words;

  external ffi.Pointer<wire_list_synonyms> synonyms;

  @ffi.Bool()
  external bool typos_enabled;

  @ffi.Uint8()
  external int min_word_size_for_one_typo;

  @ffi.Uint8()
  external int min_word_size_for_two_typos;

  external ffi.Pointer<wire_StringList> disallow_typos_on_words;

  external ffi.Pointer<wire_StringList> disallow_typos_on_fields;
}

typedef DartPostCObjectFnType = ffi.Pointer<
    ffi.NativeFunction<
        ffi.Bool Function(DartPort port_id, ffi.Pointer<ffi.Void> message)>>;
typedef DartPort = ffi.Int64;
